@@ -1,12 +1,14 @@
 package com.tlcsdm.core.util;
 
 import cn.hutool.log.StaticLog;
+import com.tlcsdm.core.exception.UnsupportedFeatureException;
 import groovy.lang.GroovyObject;
 import groovy.util.GroovyScriptEngine;
 import groovy.util.ResourceException;
 import groovy.util.ScriptException;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * 后期考虑重构
@@ -14,18 +16,26 @@ import java.io.IOException;
  * @author: unknowIfGuestInDream
  * @date: 2023/4/24 22:05
  */
-@Deprecated
 public class GroovyUtil {
-    //该变量用于指明groovy脚本所在的父目录
-    static String[] root = new String[]{"bin/groovy/"};
     static GroovyScriptEngine groovyScriptEngine;
 
-    static {
-        try {
-            groovyScriptEngine = new GroovyScriptEngine(root);
-        } catch (IOException e) {
-            e.printStackTrace();
+    public static GroovyScriptEngine init(String[] root) {
+        if (groovyScriptEngine == null) {
+            try {
+                groovyScriptEngine = new GroovyScriptEngine(root);
+            } catch (IOException e) {
+                StaticLog.error(e);
+            }
         }
+        return groovyScriptEngine;
+    }
+
+    public static GroovyScriptEngine engine() {
+        if (groovyScriptEngine == null) {
+            throw new UnsupportedFeatureException(
+                "Groovy is not supported, please confirm whether there is a groovy dependency.");
+        }
+        return groovyScriptEngine;
     }
 
     /**
@@ -37,27 +47,24 @@ public class GroovyUtil {
      * @return
      */
     @SuppressWarnings({"rawtypes"})
-    public static Object invokeMethod(String scriptName, String methodName, Object... params) throws Exception {
+    public static Object invokeMethod(String scriptName, String methodName, Object... params) {
         Object ret = null;
-        Class scriptClass = null;
+        Class scriptClass;
         GroovyObject scriptInstance = null;
 
         try {
             scriptClass = groovyScriptEngine.loadScriptByName(scriptName);
-            scriptInstance = (GroovyObject) scriptClass.newInstance();
-        } catch (ResourceException | ScriptException | InstantiationException | IllegalAccessException e1) {
-            StaticLog.warn("加载脚本[" + scriptName + "]出现异常", e1);
-            throw new Exception("加载脚本" + scriptName + "失败");
+            scriptInstance = (GroovyObject) scriptClass.getDeclaredConstructor().newInstance();
+        } catch (ResourceException | ScriptException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e1) {
+            StaticLog.warn("Load script [" + scriptName + "] failed", e1);
         }
 
         try {
             ret = scriptInstance.invokeMethod(methodName, params);
         } catch (IllegalArgumentException e) {
-            StaticLog.warn("执行方法" + methodName + "参数出现异常, 参数为" + params, e);
-            throw new Exception("调用方法[" + methodName + "]失败，因参数不合法");
+            StaticLog.warn("Execute " + methodName + " params error, params are " + params, e);
         } catch (Exception e) {
-            StaticLog.warn("执行方法" + methodName + "出现异常", e);
-            throw new Exception("调用方法[" + methodName + "]失败");
+            StaticLog.warn("Execute " + methodName + " error", e);
         }
 
         return ret;
